# trim-in-place

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
benches/: no_trim.rs  trim.rs
src/: lib.rs
tests/: tests.rs
