[package]
name = "trim-in-place"
version = "0.1.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/trim-in-place"
homepage = "https://magiclen.org/trim-in-place"
keywords = ["string", "trim", "in-place"]
categories = ["no-std"]
description= "In-place trimming strings."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "benches/*"]

[badges.travis-ci]
repository = "magiclen/trim-in-place"
branch = "master"

[dependencies]

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "trim"
harness = false

[[bench]]
name = "no_trim"
harness = false