[package]
name = "trim-in-place"
version = "0.1.7"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/trim-in-place"
homepage = "https://magiclen.org/trim-in-place"
keywords = ["string", "trim", "in-place"]
categories = ["no-std"]
description = "In-place trimming strings."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "benches/*"]

[dependencies]

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "trim"
harness = false

[[bench]]
name = "no_trim"
harness = false